--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <!-- HEADER -->
 <header class="header">
   <div class="container">
-    <h1 class="logo">Carmem Jatobá</h1>
+    <div class="logo">
+  <img src="logo.jpg" alt="Logo do Salão">
+</div>
     <nav aria-label="Menu principal">
       <a href="#home">Home</a>
       <a href="#planos">Planos</a>
@@ -24,18 +26,18 @@
       <a href="#sobre">Sobre</a>
       <a href="#localizacao">Localização</a>
     </nav>
-    <a class="btn-primary" href="#agendar">Agendar</a>
+    <a class="btn-primary" href="https://wa.me/5531973318300" target="_blank">Agendar</a>
   </div>
 </header>
 
 <!-- HERO -->
 <section id="home" class="hero">
-  <div class="overlay"></div>
+  <!-- <div class="overlay"></div>
   <div class="hero-content">
-    <h2 class="hero-title">Beleza, cuidado e confiança no Salão Carmem Jatobá</h2>
+    <h2 class="hero-title">Beleza, cuidado e confiança!</h2>
     <p class="hero-sub">Venha valorizar seu visual!<br> Produtos profissionais e um atendimento pensado para valorizar sua autoestima.</p>
     <a href="#planos" class="btn-primary">Conhecer Planos</a>
-  </div>
+  </div> -->
 </section>
 
 <!-- PLANOS -->
@@ -60,6 +62,7 @@
   </div>
 </section>
 
+
 <!-- SERVIÇOS -->
 <section id="servicos" class="section">
   <h2 class="section-title">Serviços</h2>
@@ -78,6 +81,39 @@
     </div>
   </div>
 </section>
+
+<!--ABOUT HER-->
+<section class="section about-split" id="sobre-ela">
+  <h2 class="section-title">Quem está por trás do Studio</h2>
+
+  <div class="about-wrapper">
+    
+    <!-- Foto -->
+    <div class="about-photo">
+      <img src="ela.jpeg" alt="Carmem Jatobá">
+    </div>
+
+    <!-- Divisor -->
+    <div class="about-divider"></div>
+
+    <!-- Texto -->
+    <div class="about-text">
+      <p>
+        Olá, sou <strong>Carmem Jatobá</strong>, especialista em cuidados com a beleza e bem-estar.
+        Minha missão é realçar a sua beleza natural com técnicas modernas, atendimento
+        humanizado e um olhar atento aos detalhes.
+      </p>
+
+      <p>
+        Ao longo dos anos, construí um espaço pensado para proporcionar conforto,
+        confiança e resultados reais, sempre respeitando a individualidade de cada cliente.
+      </p>
+    </div>
+
+  </div>
+</section>
+
+<!--FIM ABOUT HER-->
 
 <!-- COMODIDADES -->
 <section id="comodidades" class="section">
@@ -176,12 +212,12 @@
 
 <!-- FOOTER -->
 <footer>
-  <p class="footer">© Salão Carmem Jatobá | Todos os direitos reservados</p>
-  <p class="footer">Desenvolvido por Marcus Vinícius Saldanha</p>
+  <p class="footer">© Salão Carmem Jatobá | Todos os direitos reservados | By Marcus Vinícius Saldanha</p>
+  <!-- <p class="footer">Desenvolvido por Marcus Vinícius Saldanha</p> -->
 </footer>
 
 <!-- WHATSAPP -->
-<a href="https://wa.me/5531973318300" class="whatsapp-btn" aria-label="Abrir WhatsApp">💬</a>
+<a href="https://wa.me/5531973318300" target="_blank" class="whatsapp-btn" aria-label="Abrir WhatsApp">💬</a>
 
 <script src="script.js"></script>
 </body>
