--- a/index.html
+++ b/index.html
@@ -32,12 +32,7 @@
 
 <!-- HERO -->
 <section id="home" class="hero">
-  <!-- <div class="overlay"></div>
-  <div class="hero-content">
-    <h2 class="hero-title">Beleza, cuidado e confiança!</h2>
-    <p class="hero-sub">Venha valorizar seu visual!<br> Produtos profissionais e um atendimento pensado para valorizar sua autoestima.</p>
-    <a href="#planos" class="btn-primary">Conhecer Planos</a>
-  </div> -->
+  <img src="capa-zoom-out.jpeg" alt="Capa Salão Carmem Jatobá" class="hero-img">
 </section>
 
 <!-- PLANOS -->
@@ -147,15 +142,36 @@
 </section>
 
 
-<!-- SOBRE -->
-<section id="sobre" class="section">
-  <h2 class="section-title">Horários de Funcionamento</h2>
-  <div class="card-info">
-    <p><strong>Segunda a Sexta:</strong> 08h00 às 18h00</p>
-    <p><strong>Sábado:</strong> 09h00 às 12h00</p>
-    <p><strong>Domingo:</strong> Fechado</p>
+<!-- SOBRE/ATENDIMENTO -->
+<section id="sobre" class="section atendimento">
+  <h2 class="section-title"> Atendimento personalizado </h2>
+  <div class="atendimento-wrapper">
+
+    <div class="atendimento-info">
+
+      <p class="atendimento-text">
+        Trabalhamos com horários organizados para oferecer um atendimento
+        tranquilo, cuidadoso e sem pressa.
+      </p>
+
+      <div class="horarios">
+        <div><strong>Terça a Sexta</strong><span>09h às 17h</span></div>
+        <div><strong>Sábado</strong><span>09h às 12h</span></div>
+      </div>
+
+      <a href="https://wa.me/5531973318300" target="_blank" class="btn-primary">
+        Agendar horário
+      </a>
+    </div>
+
+    <div class="atendimento-highlight">
+      <i class="fa-solid fa-clock"></i>
+      <p>Horários pensados para<br>respeitar seu tempo</p>
+    </div>
+
   </div>
 </section>
+
 
 <!-- TESTE-->
 <!-- AVALIAÇÕES -->
@@ -209,6 +225,32 @@
   </div>
   <p class="small-info">Temos estacionamento próximo e acessibilidade parcial no salão.</p>
 </section>
+
+<!-- INSTAGRAM -->
+<section class="section instagram-experience">
+  <div class="insta-glow"></div>
+
+  <div class="insta-content">
+    <span class="insta-eyebrow">Instagram</span>
+
+    <h2 class="insta-title">
+      Nosso salão<br>
+      também vive aqui
+    </h2>
+
+    <p class="insta-desc">
+      Tendências, transformações reais e bastidores do nosso atendimento,
+      todos os dias no Instagram.
+    </p>
+
+    <a href="https://instagram.com/" target="_blank" class="insta-cta">
+      <span>@salaocarmemjatoba</span>
+      <i class="fab fa-instagram"></i>
+    </a>
+  </div>
+</section>
+
+
 
 <!-- FOOTER -->
 <footer>
