--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     </p>
 
     <a href="https://instagram.com/" target="_blank" class="insta-cta">
-      <span>@salaocarmemjatoba</span>
+      <span>@carmemjatobastudio</span>
       <i class="fab fa-instagram"></i>
     </a>
   </div>
