--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       todos os dias no Instagram.
     </p>
 
-    <a href="https://instagram.com/" target="_blank" class="insta-cta">
+    <a href="https://www.instagram.com/carmemjatobastudio/" target="_blank" class="insta-cta">
       <span>@carmemjatobastudio</span>
       <i class="fab fa-instagram"></i>
     </a>
